--- a/notebooks-trabajo/isa.ipynb
+++ b/notebooks-trabajo/isa.ipynb
@@ -28,11 +28,230 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../finanzas-hotel-bookings.')"
+    "df = pd.read_csv('../df_primera_limpieza.csv', index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['hotel', 'is_canceled', 'lead_time', 'arrival_date_year',\n",
+       "       'arrival_date_month', 'arrival_date_week_number',\n",
+       "       'arrival_date_day_of_month', 'stays_in_weekend_nights',\n",
+       "       'stays_in_week_nights', 'adults', 'children', 'babies', 'meal',\n",
+       "       'country', 'market_segment', 'distribution_channel',\n",
+       "       'is_repeated_guest', 'previous_cancellations',\n",
+       "       'previous_bookings_not_canceled', 'reserved_room_type',\n",
+       "       'assigned_room_type', 'booking_changes', 'agent', 'company',\n",
+       "       'days_in_waiting_list', 'customer_type', 'adr',\n",
+       "       'required_car_parking_spaces', 'total_of_special_requests',\n",
+       "       'reservation_status', 'reservation_status_date', '0'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "adults                  float64\n",
+       "children                float64\n",
+       "babies                  float64\n",
+       "meal                     object\n",
+       "country                  object\n",
+       "market_segment           object\n",
+       "distribution_channel     object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1 = df.iloc[:, 9:16]\n",
+    "df1.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "adults                   0.000000\n",
+       "children                42.052455\n",
+       "babies                   0.000000\n",
+       "meal                     0.000000\n",
+       "country                 45.552307\n",
+       "market_segment          49.798737\n",
+       "distribution_channel    11.411381\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.isnull().sum()/df1.shape[0]*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['C', nan, 'A', 'D', 'E', 'G', 'F', 'H', 'L', 'P', 'B'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['reserved_room_type'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['G', nan, 'D', 'H', 'C', 'A', 'E', 'F', 'B'], dtype=object)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['children'] >0]['reserved_room_type'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['A', 'C', 'D', 'E', nan, 'G', 'F', 'L', 'H', 'P', 'B'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['children'] == 0]['reserved_room_type'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13.6858607686115"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['agent'].isnull().sum()/df.shape[0]*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([nan,  0.,  1.,  2., 10., 19.,  3., 17., 11., 18., 13., 16., 14.,\n",
+       "       15., 12.])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['children'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mean      0.119887\n",
+       "median    0.000000\n",
+       "Name: children, dtype: float64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['children'].dropna().agg(['mean', 'median'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **Sin niños** no suelen reservar L, P ('room_type')\n",
+    "- Hay más agentes que distribution_channel nulos"
    ]
   }
  ],
