--- a/notebooks-trabajo/isa.ipynb
+++ b/notebooks-trabajo/isa.ipynb
@@ -1237,11 +1237,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_filtrado = pd.read_csv('../df_primera_limpieza.csv', index_col=0)"
+    "df = pd.read_csv('../df_primera_limpieza.csv', index_col=0)"
    ]
   },
   {
@@ -1425,6 +1425,59 @@
     "\n",
     "### hilos graciosos:\n",
     "- por qué repiten (is_repeated_guest y meal, etc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "import pandas as pd\n",
+    "pd.set_option('display.max_columns', None) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['hotel', 'is_canceled', 'lead_time', 'arrival_date_year',\n",
+       "       'arrival_date_month', 'arrival_date_week_number',\n",
+       "       'arrival_date_day_of_month', 'stays_in_weekend_nights',\n",
+       "       'stays_in_week_nights', 'adults', 'children', 'babies', 'meal',\n",
+       "       'country', 'market_segment', 'distribution_channel',\n",
+       "       'is_repeated_guest', 'previous_cancellations',\n",
+       "       'previous_bookings_not_canceled', 'reserved_room_type',\n",
+       "       'assigned_room_type', 'booking_changes', 'agent', 'company',\n",
+       "       'days_in_waiting_list', 'customer_type', 'adr',\n",
+       "       'required_car_parking_spaces', 'total_of_special_requests',\n",
+       "       'reservation_status', 'reservation_status_date', '0'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.barplot(x='                       ')"
    ]
   }
  ],
