--- a/notebooks-trabajo/isa.ipynb
+++ b/notebooks-trabajo/isa.ipynb
@@ -1618,7 +1618,7 @@
    "source": [
     "def lead_time(valor):\n",
     "    if valor > 365:\n",
-    "        return '> 1 año'\n",
+    "        return '> 12 meses'\n",
     "    elif valor > 330:\n",
     "        return '> 11 meses'\n",
     "    elif valor > 300:\n",
